fixed slow transition from white on page load on firefox
im no longer blind ;)

--- a/themes/catppollo/sass/main.scss
+++ b/themes/catppollo/sass/main.scss
@@ -24,8 +24,6 @@ html {
   color: var(--text-0);
   font-family: var(--text-font);
   line-height: 1.6em;
-
-  transition: background-color 400ms ease-in-out;
 }
 
 .content {
